Bugfix/L01-193: fixed product update (#56)
* bugfix/L01-193: fixed update product

* bugfix/L01-193: added tests for mapUidRequestToEntity method